small addition to page contant

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>rk</title>
+	<title>RK</title>
 </head>
 <body>
-<h1>hi</h1>
+<h1>RK CRATIONS</h1>
 </body>
 </html>
