--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>RK</title>
+	<title>RK editors</title>
 </head>
 <body>
-<h1>RK CRATIONS</h1>
+<h1>RK CRATIONS!</h1>
 </body>
 </html>
